...
                    last_name: props.formikProps.values.lastName,
                    client_active_error: t("clientFields.cannotEditArchived"),
                })}
            />
            <FormikTextInput
                style={styles.field}
                testID="client-first-name-input"
                field={ClientField.firstName}
                fieldLabels={clientFieldLabels}
                formikProps={props.formikProps}
                returnKeyType="next"
                mode="outlined"
                disabled={isFieldDisabled()}
            />
            <FormikTextInput
                style={styles.field}
                testID="client-last-name-input"
                field={ClientField.lastName}
                fieldLabels={clientFieldLabels}
                formikProps={props.formikProps}
                returnKeyType="next"
                mode="outlined"
                disabled={isFieldDisabled()}
...
                        : "--/--/--"}
                </Text>
                <View style={styles.clientBirthdayButtons}>
                    <View>
                        {!fieldsDisabled ? (
                            <Button
                                testID="client-birthday-select-btn"
                                disabled={isFieldDisabled()}
                                mode="contained"
                                onPress={showDatepicker}
                            >
                                {t("general.select")}
                            </Button>
...
                values={filteredHcrTypes}
                mode="outlined"
                disabled={isFieldDisabled()}
            />
            <FormikTextInput
                style={styles.field}
                testID="client-village-input"
                field={ClientField.village}
                fieldLabels={clientFieldLabels}
                formikProps={props.formikProps}
                returnKeyType="next"
                mode="outlined"
                disabled={isFieldDisabled()}
...
                                    selected={props.formikProps.values.disability?.map(String)}
                                    labelStyle={styles.textGray} // todosd: text not correctly rendering as gray
                                    iconColor={themeColors.textGray}
                                />
                            </KeyboardAwareScrollView>
                            <Button
                                testID="client-disability-save-btn"
                                mode="contained"
                                style={styles.modalSelectorButton}
                                disabled={isFieldDisabled()}
                                onPress={closeDisabilityMenu}
                            >
                                {t("general.save")}
...
                            <Text style={styles.valueText}>{t("general.noObjectSelected")}</Text>
                        )}
                    </View>
                    <View>
                        {!fieldsDisabled ? (
                            <Button
                                testID="client-disability-select-btn"
                                mode="contained"
                                disabled={isFieldDisabled()}
                                onPress={openDisabilityMenu}
                            >
                                {t("general.select")}
                            </Button>
...
