...
    "noOutstandingReferrals": "No Outstanding Referrals Found",
    "csvExport": "EXPORT TO CSV",
    "noClients": "No Clients Found",
    "newInboxMessages": "You have <1>{{count}}</1> new messages in your inbox"
  },
  "disabilities": {
    "amputee": "Amputee",
    "polio": "Polio",
    "spinalCordInjury": "Spinal Cord Injury",
    "congenitalAbnormality": "Congenital Abnormality",
    "paralysisCases": "Paralysis Cases",
    "dontKnow": "Don't Know",
    "other": "Other",
...
    "noObjectSelected": "No disabilities selected",
    "cancel": "Cancel",
    "client": "Client",
    "fetch": "Fetch",
    "user": "User",
    "syncConflicts": "Sync Conflicts",
    "ok": "OK",
    "localChanges": "Local Changes",
    "confirm": "Confirm",
    "id": "ID",
    "status": "Status",
    "phoneNumber": "Phone Number",
    "active": "Active",
    "disabled": "Disabled",
    "display": "Display",
...
    "viewUser": "View user",
    "editUser": "Edit user",
    "newUser": "New user",
    "newVisit": "New Visit",
    "newReferral": "New referral",
    "newBaselineSurvey": "New baseline survey",
    "synchronization": "Synchronization",
    "inbox": "Inbox",
    "switchTargetServer": "Switch Target Server",
    "clientID": "Client ID",
    "clientList": "Client List",
    "clienRiskHistory": "Client Risk History",
    "profile": "Profile",
...
