...
        }
    }, [isFocused]);

    return (
        <SafeAreaView>
            <KeyboardAwareScrollView
                testID="new-client-scroll-view"
                keyboardShouldPersistTaps={"always"}
                ref={scrollRef}
            >
                <Formik
                    initialValues={clientInitialValues}
                    validationSchema={newClientValidationSchema}
...
                                    formikProps={formikProps}
                                    visible={showImagePickerModal}
                                    onPictureChange={() => {}}
                                    onDismiss={() => setShowImagePickerModal(false)}
                                />
                                <TextCheckBox
                                    testID="new-client-consent-checkbox"
                                    field={ClientField.interviewConsent}
                                    label={clientFieldLabels[ClientField.interviewConsent]}
                                    setFieldTouched={formikProps.setFieldTouched}
                                    setFieldValue={formikProps.setFieldValue}
                                    value={formikProps.values.interviewConsent}
                                    disabled={formikProps.isSubmitting}
...
                                            </Text>
                                        </View>
                                    )}

                                    <View style={styles.submitButtonWrapper}>
                                        <Button
                                            testID="new-client-submit-button"
                                            labelStyle={styles.submitButtonLabel}
                                            mode="contained"
                                            disabled={formikProps.isSubmitting}
                                            onPress={() => {
                                                formikProps.submitForm();
                                            }}
...
